fix checkstyle + add javatoolchains test